# PAME

./: .gitignore  .gitmodules  LICENSE  MaxReduction.cu  MaxReduction.out  README.md
Inference/: CMakeLists.txt
Inference/common/: bertbuffers.h  buffers.h  buffers_ori.h  check.h  common.h  sampleEngines.cpp
Inference/cuda_func/: CMakeLists.txt  buffer_copy.cu  buffer_copy.cuh  check_exit.cu  check_exit.cuh
Inference/include/: NvInfer.h  NvInferImpl.h  NvInferRuntime.h
Inference/parsers/: CMakeLists.txt
Inference/parsers/onnx/: CMakeLists.txt
Inference/src/exit_placement/: CMakeLists.txt  config_64.csv  config_Wav2Vec2_16.csv  config_Wav2Vec2_32.csv  config_bert_16.csv  config_complex_exit_32.csv  config_openseg_8.csv  config_posenet_32.csv  config_resnet_32_backup.csv  config_resnet_4.csv  exit_placement.cpp  exit_placement.h  export_test.py  model_analyze.py  model_export.py  model_export_v2.py  modeling_bert.py  networks.py  networks_v2.py  profiler_config.json  swin_transformer.py
Inference/src/recursive_placement/: CMakeLists.txt  exit_placement.cpp  exit_placement.h  model_export.py  networks.py  ocrnet_with_exit.py  profiler_config.json  wav2vec2_model.py
Inference/src/run_engine/: CMakeLists.txt  export_test.py  model_analyze.py  model_export_v2.py  modeling_bert.py  networks.py  networks_v2.py  ocrnet_with_exit.py  profiler_config.json  run_engine.cpp  run_engine.h  vocab.json  wav2vec2_model.py
Inference/src/run_engine/modules/backbone/: __init__.py
Inference/src/sample_bert_ori/: sample_bert_ori.cpp
Inference/src/sample_general/: CMakeLists.txt
Inference/src/sample_vgg16/: CMakeLists.txt  profiler_config.json  sample_vgg16.cpp  sample_vgg16.h
Inference/src/sample_vgg16_ori/: CMakeLists.txt
ModelSplit/: model_regenerate.py  model_trainer.py  onnx_edit.py  split_test.py  test.ipynb
Train/: metric_convert.py  mrpc_results_5.csv  pick_exit.py  posenet_results_5.csv
Train/Mytrain/: finetune.py  main.py  networks.py  run.sh  train_imagenet.py  train_imagenet_only_exit.py  utils.py
Train/Wav2Vec2/: evaluation.py  finetune.ipynb  prepare_dataset.py  run.sh  test.ipynb  test.py  train.py  train_exit.py  vocab.json  wav2vec2_model.py
Train/bert/scripts/: eval_glue.sh  train_glue.sh
Train/bert/src/: run_glue_no_trainer.py
Train/bert/src/module/: modeling_bert.py
Train/bert_train/: modeling_bert.py  run.sh  run_glue.py  test.ipynb
Train/conversion_results/: imagenet_results_14.csv  imagenet_results_5.csv  imagenet_results_8.csv
Train/human-pose-estimation.pytorch/lib/core/: config.py  function.py
Train/human-pose-estimation.pytorch/lib/models/: pose_resnet.py
Train/human-pose-estimation.pytorch/lib/utils/: utils.py
Train/human-pose-estimation.pytorch/pose_estimation/: train_exit.py
Train/openseg/: config.profile  cookies.txt  main.py  test_with_exit.sh  train_with_exit.sh  trial.sh
Train/openseg.pytorch/: config.profile
Train/openseg/configs/cityscapes/: R_101_D_8.json  R_101_D_8_with_exit.json
Train/openseg/lib/loss/: loss_helper.py  loss_manager.py
Train/openseg/lib/metrics/: cityscapes_evaluator.py
Train/openseg/lib/models/: model_manager.py
Train/openseg/lib/models/backbones/: backbone_selector.py
Train/openseg/lib/models/nets/: ocrnet.py  ocrnet_with_exit.py
Train/openseg/lib/models/tools/: module_helper.py
Train/openseg/scripts/cityscapes/hrnet/: run_h_48_d_4_ocr.sh
Train/openseg/segmentor/: etrainer.py  tester.py
Train/openseg/segmentor/tools/: module_runner.py
Train/pose_estimation/: run.sh
Train/pose_estimation/lib/core/: config.py  function.py  loss.py
Train/pose_estimation/lib/dataset/: mpii.py
Train/pose_estimation/lib/models/: __init__.py  pose_resnet.py
Train/pose_estimation/lib/nms/: cpu_nms.c  gpu_nms.cpp
Train/pose_estimation/lib/utils/: utils.py  vis.py
Train/pose_estimation/pose_estimation/: finetune.py  train.py  train_exit.py  valid.py
output/mpii/pose_resnet_101/384x384_d256x3_adam_lr1e-3/: pred.mat
(+14 files in other folders)
